# large-scale-entity-matching

./: LICENSE  README.md  gitignore  pyproject.toml
src/large_scale_entity_matching/: __init__.py  api.py
src/large_scale_entity_matching.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_integration.py  test_preprocessing.py  test_scoring.py
