[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "large-scale-entity-matching"
version = "0.1.0"
description = "Entity matching pipeline for large-scale datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jannis Rudloff" }
]
dependencies = [
  "duckdb",
  "pandas",
  "numpy",
  "pyarrow",
  "sentence-transformers",
  "faiss-cpu"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]